--- a/src/components/Category/Category.css
+++ b/src/components/Category/Category.css
@@ -1,4 +1,6 @@
 .category {
     background-color: rgb(186, 213, 214);
-    border-radius: 5%;
+    border-radius: 10px 10px 0px 0px;
+    max-height: fit-content;
+    margin: 20px;
 }
