--- a/src/components/TaskList/TaskList.css
+++ b/src/components/TaskList/TaskList.css
@@ -2,11 +2,20 @@
     background-color: aliceblue;
 }
 
+.task * {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
 .task-modal {
     background-color: rgb(64, 197, 181);
 }
 
 
 .task-list {
-    background-color: rgb(119, 46, 46);
+    background-color: rgb(82, 107, 31);
+    max-height: 400px;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
