--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -8,27 +8,36 @@
     text-overflow: ellipsis;
 }
 
+::backdrop {
+    background: rgba(0, 0, 0, 0.5);
+}
+
+
 .task {
-    background-color: antiquewhite;
+    background-color: rgb(235, 235, 235);
+    width: 80vw;
+    height: 80vh;
+    border-radius: 10px;
+    border-width: 0px;
+    border-color: rgb(204, 227, 248);
+    /* display: flex;
+    flex-direction: column; */
 }
 
 .task * {
     color: black;
 }
 
-.task input, .task-description {
+.task input, .task textarea {
     background: none;
     border: none;
     outline: none;
 }
 
-.task-description {
-    resize: none;
-}
-
 .task-buttons-container {
     display: flex;
     justify-content: right;
+    flex-grow: 0;
 }
 
 .task button {
@@ -38,20 +47,40 @@
     font-weight: bold;
 }
 
+.task-content {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+
 .task-name {
     font-size: 2.5em;
     font-family: "Poppins", serif;
     font-weight: bold;
+    flex-grow: 0;
 }
 
 .course-due-date {
     display: flex;
     justify-content: space-between;
-    font-family: "Prompt", serif;
-    font-weight: 500;
+    flex-grow: 0;
 }
 
 .course-due-date * {
     margin-top: 0px;
     font-size: 1em;
+    font-family: "Prompt", serif;
+    font-weight: 500;
+}
+
+.task-due-date {
+    width: 350px;
+}
+
+.task-description {
+    resize: none;
+    width: 100%;
+    font-size: 1.25em;
+    font-family: sans-serif;
+    flex-grow: 0;
 }
