--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -12,16 +12,20 @@
     background: rgba(0, 0, 0, 0.5);
 }
 
-
-.task {
+.task-modal {
     background-color: rgb(235, 235, 235);
     width: 80vw;
     height: 80vh;
     border-radius: 10px;
     border-width: 0px;
     border-color: rgb(204, 227, 248);
-    /* display: flex;
-    flex-direction: column; */
+}
+
+.task {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .task * {
@@ -82,5 +86,5 @@
     width: 100%;
     font-size: 1.25em;
     font-family: sans-serif;
-    flex-grow: 0;
+    flex-grow: 1;
 }
