Add divider in task card

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+/* body {
+    padding: 0% 25%;
+} */
+
 .category-container {
     display: grid;
     grid-template-columns: repeat(4, minmax(100px, 1fr));
