--- a/src/components/Course/Course.css
+++ b/src/components/Course/Course.css
@@ -1,3 +1,5 @@
 .course {
-    background-color: aquamarine;
+    background-color: rgb(15, 139, 139);
+    font-family: "Poppins", serif;
+    color: white;
 }
