--- a/src/components/Course/Course.css
+++ b/src/components/Course/Course.css
@@ -1,5 +1,28 @@
-.course {
+.course-heading {
+    border-radius: 5px 5px 0px 0px;
     background-color: rgb(15, 139, 139);
-    font-family: "Poppins", serif;
     color: white;
+    height: 100px;
+    display: flex;
+    align-items: end;
+    justify-content: space-between;
+    padding: 1%;
+}
+
+.course-name {
+    font-family: "Poppins", serif;
+    font-weight: 600;
+    font-size: 2rem;
+    line-height: 0.8;
+}
+
+.add-task-button {
+    background: rgb(34, 70, 58);
+    border: 0px;
+}
+
+.course hr {
+    margin: 0px;
+    height: 2px;
+    background-color: rgb(15, 139, 139);
 }
